--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     
-    <header>
+    <header> <!--start of nav bar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -35,11 +35,11 @@
             
             </div>
             <h1 id="heading"> Matthew Marchand</h1>
-          </nav>
+          </nav> <!--end of nav bar-->
     </header>
 
     <section>
-      <div class="container">
+      <div class="container"><!-- start of bootstrap grid-->
         <div class="row">
           <div class="col-sm">
             <h1 id="portfolio"> Portfolio</h1>
@@ -68,14 +68,14 @@
           </div>
           </div>
 
-          <footer id="footer">
+          <footer id="footer"> <!--footer-->
             <div class="card">
               <div class="card-header">
                Footer
               </div>
             </div>
           </footer>
-      </div>
+      </div> <!--end of grid-->
 
     </section>
 
