--- a/home.html
+++ b/home.html
@@ -50,7 +50,7 @@
                 <img src="assets/images/me.jpg" class="img-fluid" alt="Responsive image">  
             </div>
             <div class="col-sm-9">
-                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
+              <br><br><p>Hello, my name is Matthew Marchand, and I am a web developer. After spending years in the medical industry, I decided it was time to follow my dreams and move over to web development. The transition was not always easy but so far it has been one of the best decisions I have ever made. I am always available to listen to any inquiries, feel free to reach out to me using my contact page.</p>
             </div>
             </div>
            
