updated contact info

--- a/contact.html
+++ b/contact.html
@@ -66,11 +66,15 @@
         <input type="submit" value="Submit">
     </div>
     </div>
+    
+    </div>
+
 
     <footer id="footer"> <!--footer is in the container but not in a row / col-->
       <div class="card">
         <div class="card-header">
-         Footer
+            <p id="contact">Contact info: <a href=" www.linkedin.com/in/matthew-marchand-ab55211ba/"> Linkedin</a>, E-mail:<a href="marchandmr@icloud.com"> marchandmr@icloud.com</a></p>
+            
         </div>
       </div>
     </footer>
