--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
         </div>
         <div class="row">
           <div class="col-sm">
-            <img src="http://placehold.it/150x150" class="img-thumbnail" alt="Responsive image">
+            <img src="assets/images/assignment.jpg" class="img-thumbnail" alt="Responsive image">
           </div>
           <div class="col-sm">
             <img src="http://placehold.it/150x150" class="img-thumbnail" alt="Responsive image">
