hopeful icon path fix

--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,7 @@
   <footer class="page-footer font-small cyan darken-3">
     <div class="container">
       <div class="footer-copyright text-center py-3">
-        <a href="https://linkedin.com/in/matthewmarchand-ab55211ba"> <img src="assets/images/Li-Logo.png"
+        <a href="https://linkedin.com/in/matthewmarchand-ab55211ba"> <img src="assets/images/linkedin.png"
             alt="Linkedin"></a>
         <a href="assets/resume/Resume.pdf"><img src="assets/images/portfolio-img.png" alt="Resume"></a>
         <a href="mailto:marchandmr@icloud.com"><img src="assets/images/email-icon.png" alt="E-mail"></a>
