--- a/portfolio.html
+++ b/portfolio.html
@@ -69,7 +69,7 @@
           <a href="https://github.com/marchandmr/Javascript-Quiz-HW4">JavaScript-Quiz
             <hr></a>
           <a href="https://marchandmr.github.io/Javascript-Quiz-HW4/"><img src="assets/images/javaScript-quiz.png"
-              class="img-thumbnail" alt="Responsive image">
+              class="img-thumbnail" alt="Responsive image"></a>
         </div>
       </div>
       <div class="row">
