more css updates on the portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -60,13 +60,13 @@
       </div>
       <div class="row">
         <div class="col-sm">
-          <a href="https://github.com/JasonMcD96/Meal-Maker">Meal-Maker
+          <a class="portfolio" href="https://github.com/JasonMcD96/Meal-Maker">Meal-Maker
             <hr></a>
           <a href="https://jasonmcd96.github.io/Meal-Maker/"><img src="assets/images/assignment.png"
               class="img-thumbnail" alt="Responsive image"></a>
         </div>
         <div class="col-sm">
-          <a href="https://github.com/marchandmr/Javascript-Quiz-HW4">JavaScript-Quiz
+          <a class="portfolio" href="https://github.com/marchandmr/Javascript-Quiz-HW4">JavaScript-Quiz
             <hr></a>
           <a href="https://marchandmr.github.io/Javascript-Quiz-HW4/"><img src="assets/images/javaScript-quiz.png"
               class="img-thumbnail" alt="Responsive image"></a>
