--- a/home.html
+++ b/home.html
@@ -56,9 +56,9 @@
 
       <div class="row">
         <div class="col-sm-3">
-          <img src="assets/images/me.jpg" class="img-fluid" alt="Responsive image">
+          <img src="assets/images/me.jpg" alt="Responsive image">
         </div>
-        <div class="col-sm-9">
+        <div class="col-sm">
           <br><br>
           <p>Hello, my name is Matthew Marchand, and I am a web developer. After spending years in the medical industry,
             I decided it was time to follow my dreams and move over to web development. The transition was not always
@@ -78,6 +78,7 @@
         <a href="mailto:marchandmr@icloud.com"><img src="assets/images/email-icon.png" alt="E-mail"></a>
         <a href="https://github.com/marchandmr"> <img src="assets/images/github-icon.png" alt="GitHub"></a>
         <p><br>469-406-3774</p>
+
   </footer>
   <!-- Footer -->
 
