--- a/portfolio.html
+++ b/portfolio.html
@@ -61,20 +61,26 @@
       <div class="row">
         <div class="col-sm">
           <a class="portfolio" href="https://github.com/JasonMcD96/Meal-Maker">Meal-Maker
-            <hr></a>
+            <hr>
+          </a>
           <a href="https://jasonmcd96.github.io/Meal-Maker/"><img src="assets/images/assignment.png"
               class="img-thumbnail" alt="Responsive image"></a>
         </div>
         <div class="col-sm">
           <a class="portfolio" href="https://github.com/marchandmr/Javascript-Quiz-HW4">JavaScript-Quiz
-            <hr></a>
+            <hr>
+          </a>
           <a href="https://marchandmr.github.io/Javascript-Quiz-HW4/"><img src="assets/images/javaScript-quiz.png"
               class="img-thumbnail" alt="Responsive image"></a>
         </div>
       </div>
       <div class="row">
         <div class="col-sm">
-          <img src="http://placehold.it/150x150" class="img-thumbnail" alt="Responsive image">
+          <a class="portfolio" href="https://github.com/marchandmr/project2">Happy Healthy Home
+            <hr>
+          </a>
+          <a href="https://polar-lake-20379.herokuapp.com/"><img src="assets/images/happyhome.png" class="img-thumbnail"
+              alt="Responsive image"></a>
         </div>
         <div class="col-sm">
           <img src="http://placehold.it/150x150" class="img-thumbnail" alt="Responsive image">
